<resources>
    <string name="app_name">visitor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="placa">Placa</string>
    <string name="loginhere">Already have an account? <uL>Login  </uL> </string>
    <string name="signup">SignUp</string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>